// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerfectionDetails with complaints content 1`] = `
<div
  class="PerfectionDetails-Content PerfectionDetails-Content_Type_Complaints"
>
  <div
    class="ComplaintItem"
  >
    <div
      class="ComplaintItem-Message"
    >
      Problem1
    </div>
    <div
      class="ComplaintItem-Data"
    >
      11 сент. 2019
    </div>
  </div>
  <div
    class="ComplaintItem"
  >
    <div
      class="ComplaintItem-Message"
    >
      Problem2
    </div>
    <div
      class="ComplaintItem-Data"
    >
      11 сент. 2019
    </div>
  </div>
</div>
`;

exports[`PerfectionDetails with empty complaints content 1`] = `
<div
  class="PerfectionDetails-Content PerfectionDetails-Content_Type_Complaints"
>
  <div
    class="PerfectionDetails-EmptyImage"
  />
  <h3
    class="PerfectionDetails-EmptyHeader"
  >
    i18nRaw:complaintsNotFoundTitle
  </h3>
</div>
`;

exports[`PerfectionDetails with empty content 1`] = `
<div
  class="PerfectionDetails-Content PerfectionDetails-Content_Type_Empty"
>
  <div
    class="PerfectionDetails-EmptyImage"
  />
  <h3
    class="PerfectionDetails-EmptyHeader"
  >
    i18nRaw:problemsNotFoundTitle
  </h3>
  <p
    class="PerfectionDetails-Message"
  >
    i18nRaw:problemsNotFound
    <a
      href="https://wiki.yandex-team.ru/Intranet/abc/features/suspicious/"
      target="_blank"
    >
      i18nRaw:problemsNotFoundLinkText
    </a>
  </p>
</div>
`;

exports[`PerfectionDetails with issues content + issue groups 1`] = `
<div
  class="PerfectionDetails-Content PerfectionDetails-Content_Type_Issues"
>
  {"component":"PerfectionIssueGroup","props":{"className":"PerfectionDetails-ContentItem","issueGroup":{"name":{"ru":"Понятность"},"description":{"ru":"Сервис находится в желтой зоне по количеству проблем в группе Команда"},"recommendation":{"ru":"Исправьте проблемы в сервисе и не допускайте новыx"},"summary":{"currentLevel":"warning","currentWeight":55,"criticalWeight":33,"warningWeight":66,"currentExecution":{"name":{"ru":"Сервис перейдёт в статус Требуется информация"},"applyDate":"2019-10-17T00:15:16.000Z","isCritical":true},"nextExecution":{"name":{"ru":"Сервис перейдет в красную зону при достижении порога 33% и будет Закрыт"},"applyDate":"2019-09-17T00:15:16.000Z","isCritical":true}}}}}
  <div
    class="PerfectionIssue PerfectionDetails-ContentItem"
  >
    <h3
      class="PerfectionIssue-Title"
    >
      <span
        class="PerfectionIssueLevelIcon PerfectionIssueLevelIcon_type_small PerfectionIssueLevelIcon_level_warning PerfectionIssue-LevelIcon"
      />
      Руководитель вне кадровой иерархии
      <span
        class="PerfectionIssue-Weight"
      >
        10%
      </span>
    </h3>
    <div
      class="WikiFormatter PerfectionIssue-Description"
    />
    <div
      class="WikiFormatter PerfectionIssue-Recommendation"
    />
    {"component":"PerfectionExecution","props":{"className":"PerfectionIssue-Execution","execution":{"name":{"ru":"Сервис перейдет в статус Требуется информация"},"applyDate":"2019-09-17T00:15:16.000Z"}}}
  </div>
</div>
`;

exports[`PerfectionDetails with issues content 1`] = `
<div
  class="PerfectionDetails-Content PerfectionDetails-Content_Type_Issues"
>
  <div
    class="PerfectionIssue PerfectionDetails-ContentItem"
  >
    <h3
      class="PerfectionIssue-Title"
    >
      <span
        class="PerfectionIssueLevelIcon PerfectionIssueLevelIcon_type_small PerfectionIssueLevelIcon_level_warning PerfectionIssue-LevelIcon"
      />
      Руководитель вне кадровой иерархии
      <span
        class="PerfectionIssue-Weight"
      >
        10%
      </span>
    </h3>
    <div
      class="WikiFormatter PerfectionIssue-Description"
    />
    <div
      class="WikiFormatter PerfectionIssue-Recommendation"
    />
    {"component":"PerfectionExecution","props":{"className":"PerfectionIssue-Execution","execution":{"name":{"ru":"Сервис перейдет в статус Требуется информация"},"applyDate":"2019-09-17T00:15:16.000Z"}}}
  </div>
</div>
`;

exports[`PerfectionDetails with paginated complaints content 1`] = `
<div
  class="PerfectionDetails-Content PerfectionDetails-Content_Type_Complaints"
>
  <div
    class="ComplaintItem"
  >
    <div
      class="ComplaintItem-Message"
    >
      Problem1
    </div>
    <div
      class="ComplaintItem-Data"
    >
      11 сент. 2019
    </div>
  </div>
  <div
    class="ComplaintItem"
  >
    <div
      class="ComplaintItem-Message"
    >
      Problem2
    </div>
    <div
      class="ComplaintItem-Data"
    >
      11 сент. 2019
    </div>
  </div>
  <div
    class="AbcPagination AbcPagination_type_pages AbcPagination_type_pages PerfectionDetails-Pagination"
  >
    <ul
      class="Pagination"
    >
      <li
        class="Pagination-Item"
      >
        <a
          class="Link Link_theme_black AbcPagination-Item Pagination-Inner Pagination-Inner_current Pagination-Inner_kind_page"
          href="?issuesPage=1"
        >
          1
        </a>
      </li>
      <li
        class="Pagination-Item"
      >
        <a
          class="Link Link_theme_black AbcPagination-Item Pagination-Inner Pagination-Inner_kind_page"
          href="?issuesPage=2"
        >
          2
        </a>
      </li>
      <li
        class="Pagination-Item"
      >
        <a
          class="Link Link_theme_black AbcPagination-Item Pagination-Inner Pagination-Inner_kind_page"
          href="?issuesPage=3"
        >
          3
        </a>
      </li>
      <li
        class="Pagination-Item"
      >
        <a
          class="Link Link_theme_black AbcPagination-Item Pagination-Inner Pagination-Inner_kind_page"
          href="?issuesPage=4"
        >
          4
        </a>
      </li>
      <li
        class="Pagination-Item"
      >
        <a
          class="Link Link_theme_black AbcPagination-Item Pagination-Inner Pagination-Inner_kind_page"
          href="?issuesPage=5"
        >
          5
        </a>
      </li>
      <li
        class="Pagination-Item"
      >
        <a
          class="Link Link_theme_black AbcPagination-Item Pagination-Inner Pagination-Inner_kind_text"
          href="?issuesPage=2"
        >
          i18n:next
        </a>
      </li>
    </ul>
  </div>
</div>
`;
